app/assets/stylesheets/components/dashnavbar.scss
.dashboard-nav-container {
  position: fixed;
  background-color: $white;
  z-index: 5;
  height: 55px;
  width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
  font-family: $serif;
  padding: 0 20px;

  display: flex;
  justify-content: space-between;
  align-items: center;

  .fa-search {
    position: absolute;
    left: 20px;
    top: 10px;
    color: $gray;
  }

  img.logo {
    width: 25px;
    height: 40px;
  }

  .logo-notext {
    display: block;
    width: 25px;
    height: 40px;
    background-image: image_url("capAppLogo.png");
    background-size: 25px 40px;
    margin-right: 20px;
    &:hover {
      background-image: image_url("capAppLogo-hover.png");
    }
  }

  .content {
    display: flex;
    justify-content: space-between;
    flex: 1;

    @media (max-width: 480px) {
      display: none;
    }
  }
  .links {
    display: flex;
    flex: 1;
    margin-left: 30px;
    font-weight: 700;
    justify-content: space-between;
    align-items: center;
    li {
      font-size: 0.75em;
      margin-left: 5px;
      text-align: center;
      a {
        color: $black;
        text-decoration: none;
        &:hover {
          color: $green;
        }
      }
    }
  }
}

.dashboard-nav-mobile {
  display: none;

  @media (max-width: 480px) {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    align-items: center;
  }
}

.dash-nav-container-mobile {
  z-index: 20;
  top: 0;
  right: 0;
  position: absolute;
  height: 100vh;
  width: 100%;

  .dash-nav-mobile-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
    font-size: 2em;
    position: fixed;
    background-color: white;
    width: 100%;
    height: 100%;

    > div {
      display: flex;
      align-items: center;
    }

    img,
    svg {
      width: 25px;
      height: 25px;
      margin-right: 10px;
    }

    a {
      text-decoration: none;
      color: $black;
    }

    button {
      background: none;
      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
    }
  }
}

.search-wrapper {
  position: relative;
  margin-left: 10px;

  .search {
    position: relative;
    display: inline-block;
    border-radius: 5px;
    height: 100%;
    width: 100%;
    padding: 10px 40px;
    box-sizing: border-box;
    box-shadow: 0px 0px 0px $lighter-gray;
    border: 1px solid $lighter-gray;
    transition: all 0.2s ease-in-out;

    &:focus,
    &:hover {
      box-shadow: 0px 0px 50px $lighter-gray;
      transition: box-shadow 0.2s;
    }
  }
}

.stock-list {
  position: absolute;
  top: 30px;
  z-index: 1;
  width: 100%;

  .no-results {
    padding: 7px 20px;
  }
  h3,
  ul a {
    padding: 10px;
  }
  ul {
    box-shadow: 0px 37px 50px $lighter-gray;
    font-size: 0.85em;
    font-family: $narrow;
    box-sizing: border-box;
    background-color: $white;
    padding: 20px 0px;
    border: 1px solid $lighter-gray;
    border-top: 0;

    // add this back
    display: none;
    //         max-height: 195px;

    overflow: hidden;
    /* Hide scrollbar for IE and Edge */
    -ms-overflow-style: none;
    /* Hide scrollbar for Chrome, Safari and Opera */
    &::-webkit-scrollbar {
      display: none;
    }

    li {
      display: block;
    }
    .category {
      color: $gray;
      padding: 10px 20px;
      padding-top: 0;
      margin-bottom: 0;
    }
    .highlight {
      background-color: none;
      color: $green;
      &.negative-change {
        color: $red;
      }
    }

    a {
      color: $black;
      display: block;
      display: flex;
      padding: 7px 20px;
      &:hover,
      &.selected {
        background-color: $lightblue;
      }
      span {
        display: inline-block;
        &.symbol {
          margin-right: 30px;
          width: 45px;
        }
      }
    }

    &.show {
      display: block;
    }
  }
}

.account-dropdown {
  position: relative;

  .account-options {
    font-size: 1.15em;
    display: none;
    position: absolute;
    min-width: 250px;
    max-height: 85vh;
    overflow: auto;
    z-index: 5;
    right: 0;
    top: 30px;
    box-shadow: 0 0 30px $lightgray;
    border-radius: 3px;
    background-color: white;
    .summary {
      // this padding must match 'a' below
      padding: 20px;

      h3 {
        text-transform: uppercase;
        margin-bottom: 10px;
        font-weight: 600;
      }
      h4,
      h5 {
        line-height: 1.5em;
      }
      h4 {
        font-weight: 600;
      }
    }
    li {
      margin: 0;
      vertical-align: middle;
      a {
        display: inline-block;
        width: 100%;
        line-height: 1.45em;
        // match padding with .summary
        padding: 20px;
        &:hover {
          background-color: $lightblue;
        }
      }
    }
    .fas {
      display: inline-block;
      margin-right: 10px;
      font-size: 1.45em;

      width: 20px;
      text-align: center;
    }
  }
  .show {
    display: block;
  }
}

